faqs: fixed image sizes on mobile

--- a/master.css
+++ b/master.css
@@ -100,8 +100,8 @@ code{
 #scrollToTopButton{
     display: none;
     position: fixed;
-    bottom: 2rem;
-    right: 3rem;
+    bottom: 1rem;
+    right: 2rem;
     z-index: 2;
     border: none;
     outline: none;
@@ -113,6 +113,7 @@ code{
 #scrollToTopButton img{
     width: 30px;
     height: 30px;
+    margin: 0;
 }
 
 #scrollToTopButton:hover{
@@ -121,6 +122,8 @@ code{
 
 img{
     margin: 1rem;
+    max-width: 400px;
+    max-height: 400px;
 }
 
 
